# Robust-Stem-Extraction-SICE

./: CMakeLists.txt  README.md
clouds/: cloud0.pcd  cloud1.pcd
src/: robust-stem-extraction.cpp
